off screen bug fix

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -8,6 +8,14 @@
   --color-dark: #000;
 }
 
+html,
+body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+  overflow-x: clip;
+}
+
 /*
 * --------------------------------------------------
 * Non anchor links
@@ -37,8 +45,9 @@
     position: fixed;
     top: 0;
     bottom: 0;
-    right: calc(-1 * var(--aside-width));
+    right: 0;
     transition: transform 200ms ease-in-out;
+    transform: translateX(100%);
     overflow-y: auto;
     overscroll-behavior: contain;
     padding-top: var(--aside-top);
@@ -57,8 +66,9 @@
     position: fixed;
     top: 0;
     bottom: 0;
-    right: calc(-1 * var(--aside-width));
+    right: 0;
     transition: transform 200ms ease-in-out;
+    transform: translateX(100%);
     overflow-y: auto;
     overscroll-behavior: contain;
     padding-top: var(--aside-top);
@@ -78,8 +88,9 @@
     position: fixed;
     top: 0;
     bottom: 0;
-    right: calc(-1 * var(--aside-width));
+    right: 0;
     transition: transform 200ms ease-in-out;
+    transform: translateX(100%);
     overflow-y: auto;
     overscroll-behavior: contain;
     padding-top: var(--aside-top);
@@ -138,6 +149,7 @@ aside li {
   position: fixed;
   right: 0;
   top: 0;
+  overflow-x: hidden;
   transition: opacity 400ms ease-in-out;
   transition: opacity 400ms;
   visibility: hidden;
@@ -173,7 +185,7 @@ aside li {
 }
 /* reveal aside */
 .overlay.expanded aside {
-  transform: translateX(calc(var(--aside-width) * -1));
+  transform: translateX(0);
 }
 /* 
 button.reset {
